# stuff

./: Object_Detection_Architectures_And_Pipelines.ipynb  README.md
Detection/: detect.py  detect_segment.py  getting-started.py  live_inference.py  readme.md  segmentation-pipeline.py  simple.py
Segmentation/: multi_class_segment.py  segment.py
object-detection-system-stack/: readme.md
object-detection-system-stack/ros2_ws/src/perception_core/: package.xml  setup.cfg
object-detection-system-stack/ros2_ws/src/perception_core/launch/: perception_launch.py
object-detection-system-stack/ros2_ws/src/perception_core/perception_core/models/: dummy_model.py
